# stlviewer

./: .gitignore  Cargo.toml  iframe.html  index.html  release.sh  run.sh  static-web-server.toml  thingiverse.py
js/: bind.js
src/: bind.rs  loading.rs  main.rs  meshes_tree.rs  rotating.rs
