[package]
name = "stlviewer"
version = "0.1.0"
edition = "2021"


[dependencies]
#the whole point
bevy = { version = "0.15"} #default-features = false, features = ["bevy_core_pipeline", "bevy_pbr", "animation", "tonemapping_luts", "bevy_sprite", "bevy_scene", "webgl2"]}
bevy_panorbit_camera = "0.21"
bevy_stl = "0.15"
bevy_web_asset = {git= "https://github.com/Usioumeo/bevy_web_asset.git", branch = "ureq"}
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "z"
strip = "debuginfo"

#particular optimization for wasm
[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"


#this library features
[features]
