[package]
name = "stlviewer"
version = "0.1.0"
edition = "2021"


[dependencies]
#the whole point
bevy = { version = "0.18", default-features = false, features = [
    "bevy_pbr", #3d rendering
    "bevy_sprite", #2d rendering
    "bevy_state", #state management
    "custom_cursor",#otherwise on web it crashes
    "tonemapping_luts",#
    "webgl2",
    "png",
    "mesh_picking",
    "https", # to fetch remote assets
    "zstd_rust",
    "std",
    "async_executor",
    "web"
]}
#bevy-inspector-egui = "0.28.0"

bevy_panorbit_camera = "0.34"
bevy_stl = "0.18"
serde = "1.0.228"
serde_json = "1.0.149"
wasm-bindgen = "0.2.114"

getrandom = { version = "0.3", features = ["wasm_js"] }

[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
strip = "debuginfo"

#this library features
[features]
